--- a/index.html
+++ b/index.html
@@ -171,7 +171,76 @@
 
   <!------------//------------------- Courses part end ------------------------>
 
+  <!------------------------------- personal reco part start ------------------------>\
+    <div class="container text-center p-learn">
+      <h1 class="font-weight-bold">Get personal learning recommendations</h1>
+      <p>Answer a few questions for your top picks</p>
+      <button class="btn btn-success ">Get Started</button>
+    </div>
 
+   <!------------------------------- personal reco part end ------------------------>
+
+<!------------------------------- Testimonial part start ------------------------>
+
+<div class="container">
+  <h2 class="text-center font-weight-bold">Testimonial</h2>
+  <div class="row">
+    <div class=" testi-img">
+      <img src="images/Photos/Man.png" alt="">
+      <p>
+        There are many variations of passages of Lorem Ipsum available <br>
+        There are many variations of passages of Lorem Ipsum available <br>
+        There are many variations of passages of Lorem Ipsum available
+
+      </p>
+    </div>
+  </div>
+</div>
+
+
+<!-------------//------------------ Testimonial part end ------------------------>
+
+<!------------------------------- footer part start ------------------------>
+
+
+  <div class="container-fluid pt-5 bg-success text-white text-center">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-12 text-center mt-5">
+        <p>Millions of people of all ages and from around </p>
+
+         <p>the world are improving their lives with us</p>
+        
+      </div>
+      <div class="col-lg-2 col-md-2 col-sm-12 col-12 mb-2">
+        <h3 class="font-weight-bold">Courses</h3>
+          <h5>Graphic Design</h5>
+          <h5>Web Design</h5>
+          <h5>Business</h5>
+          <h5>Marketing</h5>
+          <h5>Engineering</h5>
+      </div>
+
+      <div class="col-lg-2 col-md-2 col-sm-12 col-12 mb-2">
+        <h3 class="font-weight-bold">Terms</h3>
+          <h5>Graphic Design</h5>
+          <h5>Web Design</h5>
+          <h5>Business</h5>
+          <h5>Marketing</h5>
+          <h5>Engineering</h5>
+      </div>
+
+      <div class="col-lg-2 col-md-2 col-sm-12 col-12 mb-2">
+        <h3 class="font-weight-bold">Useful Link</h3>
+          <h5>Graphic Design</h5>
+          <h5>Web Design</h5>
+          <h5>Business</h5>
+          <h5>Marketing</h5>
+          <h5>Engineering</h5>
+      </div>
+    </div>
+    <h6 class="text-center">Copyright  ©2020 Rokomari.com</h6>
+  </div>
+<!--------------//----------------- footer part end------------------------>
  
 
 
